tests/ui/did_you_mean/issue-43871-enum-instead-of-variant.stderr
error[E0532]: expected tuple struct or tuple variant, found enum `Option`
  --> $DIR/issue-43871-enum-instead-of-variant.rs:21:12
   |
LL |     if let Option(_) = x {
   |            ^^^^^^
   |
   = help: you might have meant to match against the enum's non-tuple variant
help: try to match against one of the enum's variants
   |
LL |     if let std::option::Option::Some(_) = x {
   |            ~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0532]: expected tuple struct or tuple variant, found enum `Example`
  --> $DIR/issue-43871-enum-instead-of-variant.rs:27:12
   |
LL |     if let Example(_) = y {
   |            ^^^^^^^
   |
   = help: you might have meant to match against the enum's non-tuple variant
note: the enum is defined here
  --> $DIR/issue-43871-enum-instead-of-variant.rs:1:1
   |
LL | enum Example { Ex(String), NotEx }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try to match against one of the enum's variants
   |
LL |     if let Example::Ex(_) = y {
   |            ~~~~~~~~~~~

error[E0423]: expected function, tuple struct or tuple variant, found enum `Option`
  --> $DIR/issue-43871-enum-instead-of-variant.rs:19:13
   |
LL |     let x = Option(1);
   |             ^^^^^^
   |
   = help: you might have meant to construct the enum's non-tuple variant
help: try to construct one of the enum's variants
   |
LL |     let x = std::option::Option::Some(1);
   |             ~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0423]: expected function, tuple struct or tuple variant, found enum `Void`
  --> $DIR/issue-43871-enum-instead-of-variant.rs:31:13
   |
LL |     let y = Void();
   |             ^^^^
   |
   = help: the enum has no tuple variants to construct
note: the enum is defined here
  --> $DIR/issue-43871-enum-instead-of-variant.rs:3:1
   |
LL | enum Void {}
   | ^^^^^^^^^^^^

error[E0423]: expected function, tuple struct or tuple variant, found enum `ManyVariants`
  --> $DIR/issue-43871-enum-instead-of-variant.rs:33:13
   |
LL |     let z = ManyVariants();
   |             ^^^^^^^^^^^^
   |
   = help: the enum has no tuple variants to construct
   = help: you might have meant to construct one of the enum's non-tuple variants
note: the enum is defined here
  --> $DIR/issue-43871-enum-instead-of-variant.rs:5:1
   |
LL | / enum ManyVariants {
LL | |     One,
LL | |     Two,
LL | |     Three,
...  |
LL | |     Ten,
LL | | }
   | |_^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0423, E0532.
For more information about an error, try `rustc --explain E0423`.
